Reproducer for automatic module not found.